# test-optimization-native

./: .gitignore  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  README.md
.github/: CODEOWNERS
.github/workflows/: build_libtestoptimization.yml  python-sdk-tests.yml  rust-sdk-tests.yml
native/: exports.go
sdks/python/test-optimization-sdk/: Dockerfile  Dockerfile-alpine  README.md  setup.py
sdks/python/test-optimization-sdk/src/test_optimization_sdk/: __init__.py  base.py  constants.py  lib.py  mock_tracer.py  native_lib.py  span.py  test.py  test_module.py  test_optimization.py  test_session.py  test_suite.py  utils.py
sdks/python/test-optimization-sdk/tests/: conftest.py  test_complete.py
sdks/rust/test-optimization-sdk/: Cargo.toml  Dockerfile  Dockerfile-alpine  README.md  build.rs  ldevcargo.cmd  ldevcargo.ps1  ldevcargo.sh
sdks/rust/test-optimization-sdk/src/: lib.rs  tests.rs
sdks/rust/test-optimization-sdk/src/test_optimization/: mock_tracer.rs  mod.rs  span.rs  test.rs  test_module.rs  test_optimization.rs  test_session.rs  test_suite.rs  utils.rs
sdks/rust/test-optimization-sdk/src/test_optimization/lib/: bindings.rs  cgo.c  cgo.rs  mod.rs
