[package]
name = "test-optimization-sdk"
version = "0.0.2"
edition = "2021"
description = "Datadog's test optimization sdk"
license = "Apache-2.0"

[dependencies]
rustc_version_runtime = "0.3.0"

[build-dependencies]
ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
zip = { version = "2.5.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.build-dependencies]
cc = "1.2.3"
